dashboard service and frontend