@@ -1,8 +1,7 @@
 package com.example.CustomerService.controllers;
 
-
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -18,12 +17,9 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.example.CustomerService.models.Customer;
 import com.example.CustomerService.service.CustomerService;
-
 @RestController
-
 @CrossOrigin(origins = "*", allowedHeaders = "*")
 @RequestMapping("/customer")
-
 public class CustomerControllers {
 
 	@Autowired
@@ -33,7 +29,7 @@ public class CustomerControllers {
 	public ResponseEntity<List<Customer>> getAllCustomers() {
 		List<Customer> users = customerService.getAllCustomers();
 		return ResponseEntity.ok(users);
-	} 
+	}
 
 	@PostMapping("/register")
 	public ResponseEntity<Customer> register(@RequestBody Customer customer) {
@@ -42,20 +38,30 @@ public class CustomerControllers {
 
 	@PostMapping("/login")
 	public ResponseEntity<?> login(@RequestBody Customer customer) {
-		Customer foundUser = customerService.findCustomerByEmail(customer.getEmail());
-		if (foundUser != null) {
+		Customer user = customerService.findCustomerByEmail(customer.getEmail());
+		if (user != null) {
 			String token = "Customer-Token";
-			return ResponseEntity.ok(Collections.singletonMap("token", token));
+			Map<String, Object> response = Map.of("token", token, "user", user);
+			return ResponseEntity.ok(response);
 		} else {
 			return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
 		}
 	}
 
 	@GetMapping("/{id}")
-	public ResponseEntity<Customer> getCustomerById(@PathVariable Long id) {
-		Customer customer = customerService.getCustomerById(id);
-		return customer != null ? ResponseEntity.ok(customer) : ResponseEntity.notFound().build();
+	public ResponseEntity<Customer> getUserById(@PathVariable Long id) {
+		Customer user = customerService.getCustomerById(id);
+		return user != null ? ResponseEntity.ok(user) : ResponseEntity.notFound().build();
 	}
 
-	
+	@PutMapping("/{id}")
+	public ResponseEntity<Customer> updateUser(@PathVariable Long id, @RequestBody Customer customerDetails) {
+		return ResponseEntity.ok(customerService.updateUser(id, customerDetails));
+	}
+
+	@PostMapping("/{customerId}/addLoanId")
+	public ResponseEntity<Void> addLoanIdToCustomer(@PathVariable Long customerId, @RequestBody Long loanId) {
+		customerService.addLoanId(customerId, loanId);
+		return new ResponseEntity<>(HttpStatus.OK);
+	}
 }
